Thu Dec 29 23:26:18 GMT 2011  Olly Betts <olly@survex.com>

	* python/testsuite2.py: Rephrase so VERBOSE=1 is there to cut and
	  paste.

Thu Dec 29 22:52:20 GMT 2011  Olly Betts <olly@survex.com>

	* python/testsuite2.py: Don't run off the traceback looking for a
	  test function if the exception wasn't from a test function.

Thu Dec 29 11:35:51 GMT 2011  Olly Betts <olly@survex.com>

	* csharp/SmokeTest.cs,java/SmokeTest.java,lua/smoketest.lua,
	  perl/t/10query.t,perl/t/parser.t,perl/t/search.t,php/smoketest.php,
	  python/pythontest2.py,python/smoketest2.py,python/testsuite2.py,
	  ruby/smoketest.rb,tcl8/smoketest.tcl,xapian-headers.i,xapian.i:
	  Update for Query internals changes.

Thu Dec 29 11:20:48 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Fix test for jni.h to try looking for jni.h relative to
	  the real location of javac, which should work for more JDKs.

Fri Dec 23 01:25:56 GMT 2011  Olly Betts <olly@survex.com>

	* python/python.i: If configure didn't find a way to do TLS, fall back
	  to using pthread_getspecific() etc, which should work on Mac OS X.

Thu Dec 22 12:00:57 GMT 2011  Olly Betts <olly@survex.com>

	* perl/t/databasemodified.t,perl/t/index.t,perl/t/writabledatabase.t:
	  Fix "Use of qw(...) as parentheses is deprecated" warnings in tests
	  with Perl 5.14.

Wed Dec 21 13:48:27 GMT 2011  Olly Betts <olly@survex.com>

	* php/add-php-type-hints: Don't add a type hint to apply($doc) as that
	  would break existing subclasses as the signature must match.

Wed Dec 21 10:06:30 GMT 2011  Olly Betts <olly@survex.com>

	* perl/Search/Xapian/Document.pm,perl/Search/Xapian/TermGenerator.pm:
	  Improve POD docs for Document and TermGenerator methods - "weight"
	  is misleading, so use "wdfinc" and "wdfdec" like the C++ API docs
	  do.

Wed Dec 21 10:05:48 GMT 2011  Olly Betts <olly@survex.com>

	* lua/util.i,perl/perl.i: Change Xapian::weight to double.

Wed Dec 21 08:43:37 GMT 2011  Olly Betts <olly@survex.com>
